# weather-hyperbot

./: .gitignore  LICENSE  README.md  pyproject.toml
src/configs/: __init__.py  bot.py  weather_services.py
src/handlers/: __init__.py  main.py
src/models/: errors.py
src/router/: __init__.py  main.py
src/services/: owm.py
src/weather_hyperbot/: main.py
