[tool.poetry]
name = "weather-hyperbot"
version = "0.1.0"
description = "Тестовое задание для BOBR.AI"
authors = ["SciBourne <bourne-sci-hack@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
loguru = "^0.7.2"

[tool.poetry.scripts]
weather-hyperbot = "weather_hyperbot.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
